--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -157,7 +157,7 @@
                 android:layout_width="@dimen/view_zero_width"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_local_shipping_black_24dp"
+                android:src="@drawable/ic_delivery"
                 android:onClick="orderProduct"/>
 
         </LinearLayout>
