--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -17,17 +17,17 @@
         android:layout_centerInParent="true">
 
         <ImageView
-            android:id="@+id/iv_empty_shelter_image"
+            android:id="@+id/iv_empty_box"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/image_empty_shelter"/>
+            android:src="@drawable/ic_empty_box"/>
 
         <TextView
             android:id="@+id/tv_empty_title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/iv_empty_shelter_image"
+            android:layout_below="@+id/iv_empty_box"
             android:layout_centerHorizontal="true"
             android:paddingTop="@dimen/padding_empty_textview"
             android:text="@string/tv_empty_view_title_text"
@@ -55,6 +55,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_add_white_24dp"/>
+        android:src="@drawable/ic_plus"/>
 
 </RelativeLayout>
