--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -7,12 +7,12 @@
     <item
         android:id="@+id/action_save"
         android:title="@string/action_save"
-        android:icon="@drawable/ic_done_white_24dp"
+        android:icon="@drawable/ic_done"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_delete"
         android:title="@string/action_delete"
-        android:icon="@drawable/ic_delete_white_24dp"
+        android:icon="@drawable/ic_trash"
         app:showAsAction="always" />
 </menu>
