--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#000080</color>
+    <color name="colorPrimary">#FF0000</color>
     <color name="colorPrimaryDark">#00BFFF</color>
     <color name="colorAccent">#00BFFF</color>
     <color name="colorPrimaryText">#0000FF</color>
